force-app/main/default/objects/H8_DataFetcherQuery__mdt/H8_DataFetcherQuery__mdt.object-meta.xml
<CustomObject>
    <description>Query definitions for the Hyphen8 Data Fetcher Flow screen component.</description>
    <label>Data Fetcher Query</label>
    <pluralLabel>Data Fetcher Queries</pluralLabel>
</CustomObject>