force-app/main/default/objects/H8_DataFetcherQuery__mdt/fields/AccessMode__c.field-meta.xml
<CustomField>
    <fullName>AccessMode__c</fullName>
    <label>Access Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USER</fullName>
                <label>User Mode</label>
                <default>true</default>
            </value>
            <value>
                <fullName>SYSTEM</fullName>
                <label>System Mode</label>
            </value>
        </valueSetDefinition>
    </valueSet>
    <required>true</required>
    <description>Default USER. SYSTEM runs the query in SYSTEM_MODE.</description>
</CustomField>