force-app/main/default/objects/H8_DataFetcherQuery__mdt/fields/ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ObjectApiName__c</fullName>
    <label>Object API Name</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <description>Primary sObject type returned by this query (used to type Flow outputs).</description>
</CustomField>