force-app/main/default/objects/H8_DataFetcherQuery__mdt/fields/SoqlTemplate__c.field-meta.xml
<CustomField>
    <fullName>SoqlTemplate__c</fullName>
    <label>SOQL Template</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>SOQL template using bind variables (e.g. WHERE Name = :name). Executed via Database.queryWithBinds.</description>
</CustomField>